samples/_failures_safe/1761261003_c26b1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fcf278f.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser_advance
      | ^~~~
